# AsciiImageConverter

./: CMakeLists.txt  main.cpp
src/: defaultImage.xpm  symbols.h
